# rustyCNC

./: Cargo.toml  README.md  build.rs  settings.json
documentation/: trajectory_calculation.drawio
src/: arc_movement.rs  coordinates.rs  linear_movement.rs  machine_configuration.rs  main.rs  motion_planner.rs  motor_step_generator.rs  movement.rs  segment.rs  utilities.rs  vector.rs
