[package]
name = "rusty_cnc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["log"] }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["log", "std", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["log", "std", "nightly"] }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features=[ "std", "nightly", "log", "medium-ethernet", "tcp", "udp", "dns", "dhcpv4", "unstable-traits", "proto-ipv6"] }
embassy-net-driver = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embedded-io = { version = "0.4.0", features = ["async", "std", "futures"] }
critical-section = { version = "1.1", features = ["std"] }

async-io = "1.6.0"
env_logger = "0.9.0"
futures = { version = "0.3.17" }
log = "0.4.14"
nix = "0.26.2"
libc = "0.2.101"
clap = { version = "3.0.0-beta.5", features = ["derive"] }
rand_core = { version = "0.6.3", features = ["std"] }
heapless = { version = "0.7.5", default-features = false }
static_cell = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
tungstenite = "0.13.0"
tokio-tungstenite = "*"
protobuf = "3"
ndarray = "0.15.6"
cgmath = "0.18.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
